--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
 	"compilerOptions": {
+        "jsx": "react",
 		"skipLibCheck": true,
 		"module": "commonjs",
 		"esModuleInterop": true,
@@ -28,9 +29,9 @@
 		}
 	},
 	"include": [
-		"./src/*.ts",
-		"./src/**/*.ts",
-		"./src/.spruce/**/*"
+		"src/**/*.ts",
+		"src/**/*.tsx",
+		"src/.spruce/**/*"
 	],
 	"exclude": [
 		"build",
