--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@sprucelabs/test": "^9.0.79",
     "@sprucelabs/test-utils": "^5.5.45",
     "@types/node": "^22.15.14",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
     "chokidar-cli": "^3.0.0",
     "eslint": "^9.26.0",
     "eslint-config-spruce": "^11.2.26",
@@ -62,5 +64,9 @@
     "moduleNameMapper": {
       "^#spruce/(.*)$": "<rootDir>/build/.spruce/$1"
     }
+  },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
