--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,9 @@
 	"include": [
 		"src/**/*.ts",
 		"src/**/*.tsx",
-		"src/.spruce/**/*"
+		"src/.spruce/**/*",
+		"src/index.ts",
+		"src/index.tsx",
 	],
 	"exclude": [
 		"build",
