--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@neurodevs/personomic",
   "version": "0.0.1",
   "description": "A platform for individualized precision neuroinformatics and biosignal experiments",
+  "type": "module",
   "keywords": [
     "nodejs",
     "typescript",
@@ -45,11 +46,8 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@neurodevs/generate-id": "^1.0.0",
-    "@sprucelabs/jest-json-reporter": "^8.0.599",
-    "@sprucelabs/resolve-path-aliases": "^2.0.540",
-    "@sprucelabs/test": "^9.0.79",
-    "@sprucelabs/test-utils": "^5.5.45",
+    "@neurodevs/generate-id": "^1.0.9",
+    "@neurodevs/node-tdd": "^0.2.2",
     "@types/node": "^22.15.14",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
