patch: initialize vite

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "main": "build/index.js",
   "scripts": {
+    "build": "tsc -b && vite build",
     "build.ci": "yarn run build.tsc && yarn run build.resolve-paths && yarn run lint",
     "build.dev": "yarn run build.tsc --sourceMap ; yarn run resolve-paths.lint",
     "build.copy-files": "mkdir -p build && rsync -avzq --exclude='*.ts' ./src/ ./build/",
@@ -29,10 +30,12 @@
     "clean.all": "yarn run clean.dependencies && yarn run clean.build",
     "clean.build": "rm -rf build/",
     "clean.dependencies": "rm -rf node_modules/ package-lock.json yarn.lock",
+    "dev": "vite",
     "fix.lint": "eslint --fix --cache '**/*.ts'",
     "lint": "eslint --cache '**/*.ts'",
     "lint.tsc": "tsc -p . --noEmit",
     "post.watch.build": "yarn run build.copy-files && yarn run build.resolve-paths",
+    "preview": "vite preview",
     "rebuild": "yarn run clean.all && yarn install && yarn run build.dev",
     "update.dependencies": "yarn run clean.dependencies && yarn",
     "resolve-paths.lint": "yarn run build.resolve-paths ; yarn run lint",
@@ -42,18 +45,24 @@
     "watch.tsc": "tsc -w"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@neurodevs/generate-id": "^1.0.9",
     "@neurodevs/node-tdd": "^0.2.2",
-    "@types/node": "^22.15.14",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.3",
+    "@eslint/js": "^9.39.1",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "babel-plugin-react-compiler": "^1.0.0",
     "chokidar-cli": "^3.0.0",
-    "eslint": "^9.26.0",
-    "eslint-config-spruce": "^11.2.26",
+    "eslint": "^9.39.1",
+     "eslint-config-spruce": "^11.2.26",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
     "jest": "^29.7.0",
     "jest-circus": "^29.7.0",
     "prettier": "^3.5.3",
