--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,7 @@
 {
-	"compilerOptions": {
-		"module": "nodenext",
-		"moduleResolution": "nodenext",
-		"target": "ES2022",
-		"lib": ["ES2022", "DOM"],
-		"types": ["node"],
-		"jsx": "react-jsx",
-		"baseUrl": "src",
-		"outDir": "build",
-		"sourceMap": false,
-		"strict": true,
-		"noImplicitAny": true,
-		"noImplicitReturns": true,
-		"noUnusedLocals": true,
-		"forceConsistentCasingInFileNames": true,
-		"declaration": true,
-		"skipLibCheck": true,
-		"esModuleInterop": true,
-		"moduleDetection": "force",
-		"allowJs": true,
-		"resolveJsonModule": true,
-		"experimentalDecorators": true
-	},
-	"include": [
-		"./src/*.ts",
-		"./src/**/*.ts",
-		"./src/*.tsx",
-		"./src/**/*.tsx"
-	]
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
+  ]
 }
