--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
   "main": "build/index.js",
   "scripts": {
     "build": "tsc -b && vite build",
-    "build.ci": "yarn run build.tsc && yarn run build.resolve-paths && yarn run lint",
-    "build.dev": "yarn run build.tsc --sourceMap ; yarn run resolve-paths.lint",
+    "build.ci": "yarn run build.tsc && yarn run lint",
+    "build.dev": "yarn run build.tsc --sourceMap",
     "build.copy-files": "mkdir -p build && rsync -avzq --exclude='*.ts' ./src/ ./build/",
-    "build.resolve-paths": "resolve-path-aliases --target build --patterns '**/*.js,**/*.d.ts'",
     "build.tsc": "yarn run build.copy-files && tsc",
     "clean": "yarn run clean.build",
     "clean.all": "yarn run clean.dependencies && yarn run clean.build",
@@ -34,12 +33,11 @@
     "fix.lint": "eslint --fix --cache '**/*.ts'",
     "lint": "eslint --cache '**/*.ts'",
     "lint.tsc": "tsc -p . --noEmit",
-    "post.watch.build": "yarn run build.copy-files && yarn run build.resolve-paths",
+    "post.watch.build": "yarn run build.copy-files",
     "preview": "vite preview",
     "rebuild": "yarn run clean.all && yarn install && yarn run build.dev",
     "update.dependencies": "yarn run clean.dependencies && yarn",
-    "resolve-paths.lint": "yarn run build.resolve-paths ; yarn run lint",
-    "test": "jest",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "watch.build.dev": "tsc-watch --sourceMap --onCompilationComplete 'yarn run post.watch.build'",
     "watch.rebuild": "yarn run clean.all && yarn install && yarn run watch.build.dev",
     "watch.tsc": "tsc -w"
@@ -49,9 +47,9 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@neurodevs/generate-id": "^1.0.9",
-    "@neurodevs/node-tdd": "^0.2.2",
     "@eslint/js": "^9.39.1",
+    "@neurodevs/generate-id": "^1.1.2",
+    "@neurodevs/node-tdd": "^0.2.5",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -59,33 +57,44 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "chokidar-cli": "^3.0.0",
     "eslint": "^9.39.1",
-     "eslint-config-spruce": "^11.2.26",
+    "eslint-config-spruce": "^11.2.26",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "jest": "^29.7.0",
     "jest-circus": "^29.7.0",
     "prettier": "^3.5.3",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vite": "^7.3.1"
   },
   "jest": {
-    "testRunner": "jest-circus/runner",
-    "maxWorkers": 4,
-    "testTimeout": 120000,
+    "preset": "ts-jest/presets/default-esm",
     "testEnvironment": "node",
-    "testPathIgnorePatterns": [
-      "<rootDir>/tmp/",
-      "<rootDir>/src/",
-      "<rootDir>/node_modules/",
-      "<rootDir>/build/__tests__/testDirsAndFiles/"
-    ],
+    "extensionsToTreatAsEsm": [".ts", ".tsx"],
+    "transform": {
+      "^.+\\.(ts|tsx)$": [
+        "ts-jest",
+        {
+          "useESM": true,
+          "tsconfig": "tsconfig.jest.json"
+        }
+      ]
+    },
     "testMatch": [
-      "**/__tests__/**/*.test.js?(x)"
+      "**/__tests__/**/*.test.[jt]s?(x)"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/build/"
+    ],
+    "transformIgnorePatterns": [
+      "/node_modules/(?!@neurodevs/)"
     ],
     "moduleNameMapper": {
-      "^#spruce/(.*)$": "<rootDir>/build/.spruce/$1"
+      "^(\\.{1,2}/.*)\\.js$": "$1"
     }
   },
   "skill": {
