patch: create Hello Personomic example

--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
       "/node_modules/(?!@neurodevs/)"
     ],
     "moduleNameMapper": {
-      "^(\\.{1,2}/.*)\\.js$": "$1"
+      "^(\\.{1,2}/.*)\\.js$": "$1",
+      "\\.(css|less|scss|sass)$": "<rootDir>/src/__tests__/AbstractPackageTest.ts"
     }
   },
   "skill": {
