--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "watch.tsc": "tsc -w"
   },
   "dependencies": {
+    "@neurodevs/react-biosensors": "^0.1.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -73,7 +74,10 @@
   "jest": {
     "preset": "ts-jest/presets/default-esm",
     "testEnvironment": "node",
-    "extensionsToTreatAsEsm": [".ts", ".tsx"],
+    "extensionsToTreatAsEsm": [
+      ".ts",
+      ".tsx"
+    ],
     "transform": {
       "^.+\\.(ts|tsx)$": [
         "ts-jest",
